Background and border colors added corresponding to status Operationnal are green and not operationnals are red

--- a/src/pages/Status.css
+++ b/src/pages/Status.css
@@ -1,3 +1,15 @@
-.statusCol {
-  border: 1px solid black;
+.statusOperationnal,
+.statusNotOperationnal {
+  border-width: 2px;
+  border-style: solid;
+}
+
+.statusOperationnal {
+  border-color: green;
+  background-color: #cfc;
+}
+
+.statusNotOperationnal {
+  border-color: red;
+  background-color: #fcc;
 }
