Colors added in panel body. If the machine works it's green and red if it doesn't.

--- a/src/pages/Status.css
+++ b/src/pages/Status.css
@@ -1,3 +1,11 @@
+.statusOperationnal .panel-body {
+  background-color: #cfc;
+}
+
+.statusNotOperationnal .panel-body {
+  background-color: #fcc;
+}
+
 .progress {
   margin-bottom: 0px;
 }
